--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <p> 中国导管之父-<b>居高潮</b></p>
     </div>
     <div style="png-align:center">
-<img src="./我的第一个网页_files/居.png" alt="sorry" width="500" height="500">
+<img src='https://github.com/leihaiyang589/leihaiyang/blob/main/%E5%B1%85.png' alt="sorry" width="500" height="500">
     </div>
 </body></html>
